--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,6 @@
 name: Metrics
 on:
   schedule: [{ cron: "0 2 * * *" }]
-  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: { branches: ["master", "main"] }
 jobs:
@@ -13,37 +12,53 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
+          # GitHub token with required scopes:
+          # - public_access (default)
+          # Optional: read:org, read:user, read:packages, repo (for private repos)
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Options
-          user: pwxiao
-          template: classic
+          # Core options
+          user: iocion
+          template: markdown # Richer, more customizable template for a cooler look
           base: header, activity, community, repositories, metadata
           config_display: large
           config_timezone: Asia/Shanghai
+          config_animations: yes # Enable animations for a dynamic feel
+          config_order: base.header, base.activity, plugin_languages, plugin_topics, plugin_achievements, base.community, base.repositories, base.metadata
+
+          # Achievements plugin
           plugin_achievements: yes
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
+          plugin_achievements_threshold: A # Higher threshold for more prestigious achievements
+          plugin_achievements_display: compact
+
+          # Languages plugin
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
+          plugin_languages_colors: github # GitHub's vibrant color scheme
           plugin_languages_ignored: javascript, css, html, php
-          plugin_languages_limit: 20
+          plugin_languages_limit: 10 # Cleaner display with fewer languages
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_threshold: 1% # Slightly higher threshold for relevance
+
+          # Topics plugin
           plugin_topics: yes
-          plugin_topics_limit: 15
-          plugin_topics_mode: starred
+          plugin_topics_limit: 10 # Focus on top topics
+          plugin_topics_mode: icons # Icon-based display for visual appeal
           plugin_topics_sort: stars
+
+          # Additional plugins for a cooler interface
+          plugin_habits: yes # Showcase coding habits
+          plugin_habits_from: 200 # Analyze recent contributions
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes # Visual charts for habits
+
+          plugin_activity: yes # Highlight recent activity
+          plugin_activity_limit: 5
+          plugin_activity_days: 14
+          plugin_activity_filter: all
