--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_display: large
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
-          plugin_achievements_secrets: yes
+          # plugin_achievements_secrets: yes
           plugin_achievements_threshold: B
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
