--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,7 +29,7 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_display: large
           config_timezone: Asia/Shanghai
-          plugin_achievements: yes
+          # plugin_achievements: yes
           # plugin_achievements_secrets: yes
           plugin_achievements_threshold: B
           plugin_languages: yes
